fix manifest.json contents and favicons load, Add sirclo logo and Frans's testimony on home page, Add fontObserver

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,18 @@
   <!-- Make the page mobile compatible -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Allow installing the app to the homescreen -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Quint" />
+  <meta name="application-name" content="Quint" />
+  <meta name="theme-color" content="#FFFFFF" />
+  <link rel="manifest" href="manifest.json?v=quint1.2">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=quint1.2" />
+  <link rel="icon" sizes="32x32" href="favicon-32x32.png?v=quint1.2" />
+  <link rel="icon" sizes="16x16" href="favicon-16x16.png?v=quint1.2" />
+  <link rel="mask-icon" color="e5d224" href="safari-pinned-tab.svg?v=quint1.2" />
+  <link rel="shortcut icon" href="favicon.ico?v=quint1.2" />
   <title>Quint - Internship Matchmaking Platform</title>
+  <meta name="description" content="Quality Internship for Talented Students, Top Universities, and Qualified Companies." />
 </head>
 <body>
 <!-- The app hooks into this div -->
