--- a/app/index.html
+++ b/app/index.html
@@ -1,27 +1,30 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <!-- The first thing in any HTML file should be the charset -->
-  <meta charset="utf-8">
-  <!-- Make the page mobile compatible -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Allow installing the app to the homescreen -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="Quint" />
-  <meta name="application-name" content="Quint" />
-  <meta name="theme-color" content="#FFFFFF" />
-  <link rel="manifest" href="manifest.json?v=quint1.2">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=quint1.2" />
-  <link rel="icon" sizes="32x32" href="favicon-32x32.png?v=quint1.2" />
-  <link rel="icon" sizes="16x16" href="favicon-16x16.png?v=quint1.2" />
-  <link rel="mask-icon" color="e5d224" href="safari-pinned-tab.svg?v=quint1.2" />
-  <link rel="shortcut icon" href="favicon.ico?v=quint1.2" />
-  <title>Quint - Internship Matchmaking Platform</title>
-  <meta name="description" content="Quality Internship for Talented Students, Top Universities, and Qualified Companies." />
-</head>
-<body>
-<!-- The app hooks into this div -->
-<div id="app"></div>
-<!-- A lot of magic happens in this file. HtmlWebpackPlugin automatically includes all assets (e.g. bundle.js, main.css) with the correct HTML tags, which is why they are missing in this HTML file. Don't add any assets here! (Check out webpackconfig.js if you want to know more) -->
-</body>
+  <head>
+    <!-- The first thing in any HTML file should be the charset -->
+    <meta charset="utf-8">
+    <!-- Make the page mobile compatible -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Allow installing the app to the homescreen -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Quint" />
+    <meta name="application-name" content="Quint" />
+    <meta name="theme-color" content="#FFFFFF" />
+    <link rel="manifest" href="/manifest.json?v=quint1.2">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=quint1.2" />
+    <link rel="icon" sizes="32x32" href="/favicon-32x32.png?v=quint1.2" />
+    <link rel="icon" sizes="16x16" href="/favicon-16x16.png?v=quint1.2" />
+    <link rel="mask-icon" color="e5d224" href="/safari-pinned-tab.svg?v=quint1.2" />
+    <link rel="shortcut icon" href="/favicon.ico?v=quint1.2" />
+    <title>Quint - Internship Matchmaking Platform</title>
+    <meta name="description" content="Quality Internship for Talented Students, Top Universities, and Qualified Companies." />
+  </head>
+  <body>
+      <!-- Display a message if JS has been disabled on the browser. -->
+      <noscript>If you're seeing this message, that means <strong>JavaScript has been disabled on your browser</strong>, please <strong>enable JS</strong> to make this app work.</noscript>
+
+      <!-- The app hooks into this div -->
+      <div id="app"></div>
+      <!-- A lot of magic happens in this file. HtmlWebpackPlugin automatically includes all assets (e.g. bundle.js, main.css) with the correct HTML tags, which is why they are missing in this HTML file. Don't add any assets here! (Check out webpackconfig.js if you want to know more) -->
+  </body>
 </html>
